--- a/client/templates/transactions_report.html
+++ b/client/templates/transactions_report.html
@@ -5,8 +5,20 @@
             <span class="input-group-addon">to</span>
             <input type="text" class="input-sm form-control" name="end" value="{{end}}"/>
         </div>
+        <input type="text" class="input-sm form-control" name="apartment" value="{{cur_apartment}}"/>
         <input type="submit"/>
     </form>
+    <div class="container">
+        {{#if Template.subscriptionsReady }}
+        <div class="row">
+            {{#each ap in get_apartments}}
+            <div class="col-xs-4 col-sm-3 col-md-2 col-lg-1 js-apartment apartment" apartment_code="{{ap.code}}" is_current_apartment="{{isCurrentApartment ap.code}}">
+                {{ap.code}}
+            </div>
+            {{/each}}
+        </div>
+        {{/if}}
+    </div>
     <table class="table table-striped table-hover">
         <thead>
         <tr>
