--- a/client/templates/navbar.html
+++ b/client/templates/navbar.html
@@ -1,3 +1,6 @@
 <template name="navbar">
     {{> loginButtons}}
+    <a class="btn btn-primary" role="button" data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+        Link with href
+    </a>
 </template>
