--- a/client/templates/recordbar.html
+++ b/client/templates/recordbar.html
@@ -1,9 +1,9 @@
 <template name="recordbar">
 
     <div class="btn-group" role="group" aria-label="...">
-        <button type="submit" class="btn btn-default btn-sm js-save-record">Save</button>
-        <button type="button" class="btn btn-default btn-sm">Reset</button>
-        <button type="button" class="btn btn-default btn-sm js-delete-record">Delete</button>
+        <button type="submit" class="btn btn-default btn-sm js-save-record"><span class="glyphicon glyphicon-ok"></span></button>
+        <button type="button" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-refresh"></span></button>
+        <button type="button" class="btn btn-default btn-sm js-delete-record"><span class="glyphicon glyphicon-remove"></span></button>
     </div>
 
 </template>
