--- a/client/templates/home.css
+++ b/client/templates/home.css
@@ -5,8 +5,6 @@ body {
 }
 
 .js-recordlist_container {
-    width: 100%;
-    height: 220px;
     overflow: scroll;
     border: black solid 1px;
     position: relative;
@@ -20,12 +18,15 @@ body {
     background: red;
 }
 
+.container.tab-content {
+}
 .listview_header {
     table-layout:fixed;
 }
 
 .listview_content {
-    height:180px;
+    width: 100%;
+    height: 250px;
     overflow-y:auto;
 }
 
