--- a/client/templates/transactions_report.html
+++ b/client/templates/transactions_report.html
@@ -1,88 +1,149 @@
 <template name="transactions_report">
-    <form class="js-transactions_report-form form-inline" role="form">
-        <div class="input-daterange input-group" id="datepicker">
-            <input type="text" class="input-sm form-control" name="start" value="{{start}}"/>
-            <span class="input-group-addon">to</span>
-            <input type="text" class="input-sm form-control" name="end" value="{{end}}"/>
-        </div>
-        <input type="text" class="input-sm form-control" name="apartment" value="{{cur_apartment}}"/>
-        <input type="submit"/>
-    </form>
-    <div class="container">
-        {{#if Template.subscriptionsReady }}
-            <div class="row">
-                <div class="col-xs-4 col-sm-3 col-md-2 col-lg-1 js-apartment apartment" apartment_code=""
-                     is_current_apartment="{{isCurrentApartment ''}}">
-                    Movimientos
+    <div class="transactions_report">
+        <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+            <div class="panel panel-default">
+                <div class="panel-heading" role="tab">
+                    <h4 class="panel-title">
+                        <a role="button" data-toggle="collapse" target="#balances" href="">
+                            Saldos
+                        </a>
+                    </h4>
                 </div>
-                {{#each ap in get_apartments}}
-                    <div class="col-xs-4 col-sm-3 col-md-2 col-lg-1 js-apartment apartment" apartment_code="{{ap.code}}"
-                         is_current_apartment="{{isCurrentApartment ap.code}}">
-                        {{ap.code}}
+                <div id="balances" class="panel-collapse collapse in" role="tabpanel" pepe="1">
+                    <div class="panel-body">
+                        <table class="table table-striped table-hover balances">
+                            <thead>
+                            <tr>
+                                <th></th>
+                                {{#each user in users}}
+                                    <th class="text-right">{{user}}</th>
+                                {{/each}}
+                                <th class="text-right">Total</th>
+                            </tr>
+                            </thead>
+                            {{#each currency in currencies}}
+                                <tr>
+                                    <th>{{currency}}</th>
+                                    {{#each user in users}}
+                                        <td class="text-right">{{get_amount user currency}}</td>
+                                    {{/each}}
+                                    <td class="text-right">{{get_total currency}}</td>
+                                </tr>
+                            {{/each}}
+                        </table>
                     </div>
-                {{/each}}
+                </div>
             </div>
-        {{/if}}
-    </div>
-    <table class="table table-striped table-hover">
-        <thead>
-        <tr>
-            <th></th>
-            {{#each user in users}}
-                <th class="text-right">{{user}}</th>
-            {{/each}}
-            <th class="text-right">Total</th>
-        </tr>
-        </thead>
-        {{#each currency in currencies}}
-            <tr>
-                <th>{{currency}}</th>
-                {{#each user in users}}
-                    <td class="text-right">{{get_amount user currency}}</td>
-                {{/each}}
-                <td class="text-right">{{get_total currency}}</td>
-            </tr>
-        {{/each}}
-    </table>
-    <a class="js-new-transaction">Nuevo</a>
-    <div class="panel">
-        <table class="table table-striped table-hover listview_header">
-            <thead>
-            <tr>
-                <th>Numero</th>
-                <th>Fecha</th>
-                <th>Depto</th>
-                <th class="text-right">ARS</th>
-                <th class="text-right">USD</th>
-                <th>Usuario</th>
-                <th>Descripción</th>
-            </tr>
-            </thead>
-        </table>
-        <div class="listview_content" style="height: 350px">
-            <table class="table table-striped table-hover">
-                <tbody>
-                {{#each trans in transactions}}
-                    {{#with trans}}
-                        <tr class="js-record-select">
-                            <td>{{trans.number}}</td>
-                            <td>{{trans.date}}</td>
-                            <td>{{trans.apartment}}</td>
-                            {{#if isARS trans.currency}}
-                                <td class="text-right">{{trans.amount}}</td>
-                                <td></td>
-                            {{else}}
-                                <td></td>
-                                <td class="text-right">{{trans.amount}}</td>
-                            {{/if}}
-                            <td>{{trans.user}}</td>
-                            <td>{{trans.description}}</td>
-                        </tr>
-                    {{/with}}
-                {{/each}}
-                </tbody>
-            </table>
+
+
+            <div class="panel panel-default">
+                <div class="panel-heading" role="tab">
+                    <h4 class="panel-title">
+                        <a role="button" data-toggle="collapse" href="" target="#apartments">
+                            Departamentos
+                        </a>
+                    </h4>
+                </div>
+                <div id="apartments" class="panel-collapse collapse in" role="tabpanel">
+                    <div class="panel-body">
+                        <div role="navigation">
+                            <ul class="nav nav-pills">
+                                <li class="js-apartment apartment {{#if isCurrentApartment ''}}active{{/if}}" apartment_code="">
+                                    <a href="#">Movimientos</a>
+                                </li>
+                                {{#each ap in get_apartments}}
+                                    <li class="js-apartment apartment {{#if isCurrentApartment ap.code}}active{{/if}}"
+                                        apartment_code="{{ap.code}}">
+                                        <a href="#">{{ap.code}}</a>
+                                    </li>
+                                {{/each}}
+
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="panel panel-default">
+                <div class="panel-heading" role="tab">
+                    <h4 class="panel-title pull-left">
+                        <a role="button" data-toggle="collapse" href="" target="#params_form">
+                            Parametros
+                        </a>
+                    </h4>
+                    <div class="clearfix"></div>
+                </div>
+                <div id="params_form" class="panel-collapse collapse" role="tabpanel">
+                    <div class="panel-body">
+                        <form class="js-transactions_report-form form-inline" role="form" id="form">
+                            <div class="input-daterange input-group" id="datepicker">
+                                <input type="text" class="input-sm form-control" name="start" value="{{start}}"/>
+                                <span class="input-group-addon">to</span>
+                                <input type="text" class="input-sm form-control" name="end" value="{{end}}"/>
+                            </div>
+                            <input type="text" class="input-sm form-control" name="apartment"
+                                   value="{{cur_apartment}}"/>
+                            <input type="submit"/>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <div class="panel panel-default">
+                <div class="panel-heading" role="tab">
+                    <button class="btn btn-primary btn-sm js-new-transaction pull-right"><span class="glyphicon glyphicon-plus"></span></button>
+                    <h4 class="panel-title pull-left">
+                        <a role="button" data-toggle="collapse" href="" target="#transactions">
+                            Movimientos
+                        </a>
+                    </h4>
+                    <div class="clearfix"></div>
+                </div>
+                <div id="transactions" class="panel-collapse collapse in" role="tabpanel">
+
+                    <div class="panel-body">
+                        <div class="listview">
+                            <table class="table table-striped table-hover">
+                                <thead>
+                                <tr>
+                                    <th>Numero</th>
+                                    <th>Fecha</th>
+                                    <th>Depto</th>
+                                    <th class="text-right">ARS</th>
+                                    <th class="text-right">USD</th>
+                                    <th>Usuario</th>
+                                    <th>Descripción</th>
+                                </tr>
+                                </thead>
+                            </table>
+                            <div class="listview_content">
+                                <table class="table table-striped table-hover">
+                                    <tbody>
+                                    {{#each trans in transactions}}
+                                        {{#with trans}}
+                                            <tr class="js-record-select">
+                                                <td>{{trans.number}}</td>
+                                                <td>{{trans.date}}</td>
+                                                <td>{{trans.apartment}}</td>
+                                                {{#if isARS trans.currency}}
+                                                    <td class="text-right">{{trans.amount}}</td>
+                                                    <td></td>
+                                                {{else}}
+                                                    <td></td>
+                                                    <td class="text-right">{{trans.amount}}</td>
+                                                {{/if}}
+                                                <td>{{trans.user}}</td>
+                                                <td>{{trans.description}}</td>
+                                            </tr>
+                                        {{/with}}
+                                    {{/each}}
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-    <hr>
 </template>
