--- a/client/templates/recordbar.html
+++ b/client/templates/recordbar.html
@@ -4,6 +4,7 @@
         <button type="submit" class="btn btn-default btn-sm js-save-record"><span class="glyphicon glyphicon-ok"></span></button>
         <button type="button" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-refresh"></span></button>
         <button type="button" class="btn btn-default btn-sm js-delete-record"><span class="glyphicon glyphicon-remove"></span></button>
+        <button type="button" class="btn btn-default btn-sm js-history-record"><span class="glyphicon glyphicon-time"></span></button>
     </div>
 
 </template>
