--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -5,8 +5,8 @@
             <div class="row">
                 <div class="col-xs-11">
                     <ul class="nav nav-tabs" id="tabs">
-                        <li  class="active"><a data-toggle="tab" href="#tab2">Informe Mensual</a></li>
-                        <li><a data-toggle="tab" href="#tab1">Listado de Movimientos</a></li>
+                        <li class="active"><a data-toggle="tab" href="#tab1">Listado de Movimientos</a></li>
+                        <li><a data-toggle="tab" href="#tab2">Informe Mensual</a></li>
                         <li><a data-toggle="tab" href="#tab3">Transactions</a></li>
                         <li><a data-toggle="tab" href="#tab4">Apartments</a></li>
                         <li><a href="#" id="addTab">+</a></li>
@@ -18,10 +18,10 @@
             </div>
         </div>
         <div class="container-fluid tab-content home-tab-container">
-            <div class="tab-pane fade in" id="tab1">
+            <div class="tab-pane fade in active" id="tab1">
                 {{> Template.dynamic template='transactions_report'}}
             </div>
-            <div class="tab-pane fade in active" id="tab2">
+            <div class="tab-pane fade in" id="tab2">
                 {{> Template.dynamic template='transactions_monthly_report'}}
             </div>
             <div class="tab-pane fade in " id="tab3" >
