--- a/client/templates/transactions_monthly_report.html
+++ b/client/templates/transactions_monthly_report.html
@@ -3,7 +3,7 @@
 
         <table class="table table-striped table-hover scroll balances">
             <thead>
-            <tr>
+            <tr class="table-header">
                 <th class="text-center">Mes</th>
                 <th class="text-center">Total</th>
                 {{#each ap in get_apartments}}
@@ -19,18 +19,17 @@
             </thead>
             <tbody style="height: 500px;">
             {{#each month in get_months}}
-
                 <tr>
-                    <td class="text-nowrap"><strong>{{month}}</strong></td>
-                    <td class="text-center"><strong>{{get_total month}}</strong></td>
+                    <td class="text-nowrap table-header">{{month}}</td>
+                    <td class="text-center table-header">{{get_total month}}</td>
                     {{#each ap in get_apartments}}
                         <td class="text-center js-apartment-amount" apartment="{{ap.code}}" month="{{month}}">
                             {{get_apartment_amount month ap.code}}
                         </td>
                     {{/each}}
                     {{#each user in get_users}}
-                        <td class="text-center">
-                            <strong>{{get_user_amount month user}}</strong>
+                        <td class="text-center table-header">
+                            {{get_user_amount month user}}
                         </td>
                     {{/each}}
 
