--- a/client/templates/transactions_report.html
+++ b/client/templates/transactions_report.html
@@ -9,11 +9,11 @@
                         </a>
                     </h4>
                 </div>
-                <div id="balances" class="panel-collapse collapse in" role="tabpanel" pepe="1">
+                <div id="balances" class="panel-collapse collapse in" role="tabpanel">
                     <div class="panel-body">
                         <table class="table table-striped table-hover balances">
                             <thead>
-                            <tr>
+                            <tr class="table-header">
                                 <th></th>
                                 {{#each user in users}}
                                     <th class="text-right">{{user}}</th>
@@ -23,7 +23,7 @@
                             </thead>
                             {{#each currency in currencies}}
                                 <tr>
-                                    <th>{{currency}}</th>
+                                    <td class="table-header">{{currency}}</td>
                                     {{#each user in users}}
                                         <td class="text-right">{{get_amount user currency}}</td>
                                     {{/each}}
@@ -105,7 +105,7 @@
                         <div class="listview">
                             <table class="table table-striped table-hover">
                                 <thead>
-                                <tr>
+                                <tr class="table-header">
                                     <th>Numero</th>
                                     <th>Fecha</th>
                                     <th>Depto</th>
