--- a/client/templates/home.scss
+++ b/client/templates/home.scss
@@ -1,4 +1,4 @@
-$inactive-pill-background: #d9d46d;
+$inactive-pill-background: #b9d3d9;
 
 html {
   height: 100%;
@@ -106,8 +106,19 @@ body {
 
 }
 
-.transactions_report #transactions .panel-body {
-  padding: 0px;
+.transactions_report {
+  table.balances {
+    th, td  {
+      background: orange;
+    }
+    tr>td:first-of-type  {
+      font-weight: bolder;
+    }
+
+  }
+  #transactions .panel-body {
+    padding: 0px;
+  }
 }
 
 
