--- a/client/templates/transactions_report.html
+++ b/client/templates/transactions_report.html
@@ -11,7 +11,7 @@
                 </div>
                 <div id="balances" class="panel-collapse collapse in" role="tabpanel">
                     <div class="panel-body">
-                        <table class="table table-striped table-hover balances">
+                        <table class="table balances">
                             <thead>
                             <tr class="table-header">
                                 <th></th>
@@ -21,15 +21,17 @@
                                 <th class="text-right">Total</th>
                             </tr>
                             </thead>
+                            <tbody>
                             {{#each currency in currencies}}
                                 <tr>
-                                    <td class="table-header">{{currency}}</td>
+                                    <td>{{currency}}</td>
                                     {{#each user in users}}
                                         <td class="text-right">{{get_amount user currency}}</td>
                                     {{/each}}
                                     <td class="text-right">{{get_total currency}}</td>
                                 </tr>
                             {{/each}}
+                            </tbody>
                         </table>
                     </div>
                 </div>
