--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -9,7 +9,7 @@
                         <li><a data-toggle="tab" href="#tab2">Informe Mensual</a></li>
                         <li><a data-toggle="tab" href="#tab3">Transactions</a></li>
                         <li><a data-toggle="tab" href="#tab4">Apartments</a></li>
-                        <li><a href="#" id="addTab">+</a></li>
+                        <!--li><a href="#" id="addTab">+</a></li-->
                     </ul>
                 </div>
                 <div class="col-xs-1">
