--- a/client/templates/balance_history_report.html
+++ b/client/templates/balance_history_report.html
@@ -1,7 +1,7 @@
 <template name="balance_history_report">
     <div class="balance_history_report">
         <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-
+            {{> record_alerts alerts=get_alerts}}
             <div class="panel panel-default">
                 <div class="panel-heading" role="tab">
                     <h4 class="panel-title pull-left">
@@ -14,8 +14,8 @@
                 <div id="params_form" class="panel-collapse collapse" role="tabpanel">
                     <div class="panel-body">
                         <form class="js-history_report-form form-inline" role="form" id="form">
-                            <input type="text" class="input-sm form-control" name="record_number"
-                                   value="{{record_number}}"/>
+                            <input type="text" class="input-sm form-control" name="timestamp"
+                                   value="{{timestamp}}"/>
                             <input type="submit"/>
                         </form>
                     </div>
@@ -25,7 +25,7 @@
                 <div class="panel-heading" role="tab">
                     <h4 class="panel-title pull-left">
                         <a role="button" data-toggle="collapse" href="" target="#records">
-                            Movimientos
+                            Balance Historico
                         </a>
                     </h4>
                     <div class="clearfix"></div>
@@ -34,32 +34,39 @@
 
                     <div class="panel-body">
                         <div class="listview">
-                            <table class="table table-striped table-hover">
+                            <table class="table table-striped table-hover balances">
                                 <thead>
-                                <tr>
-                                    <th>Id</th>
-                                    <th>Accion</th>
-                                    <th>Fecha</th>
-                                    <th>Usuario</th>
-                                </tr>
+                                    <tr>
+                                        <th></th>
+                                        <th>MEC</th>
+                                        <th>PDB</th>
+                                        <th>DAB</th>
+                                        <th>MAB</th>
+                                        <th>GMB</th>
+                                        <th>TOTAL</th>
+                                    </tr>
                                 </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>ARS</td>
+                                        <td>{{getAmount 'MEC' 'ARS'}}</td>
+                                        <td>{{getAmount 'PDB' 'ARS'}}</td>
+                                        <td>{{getAmount 'DAB' 'ARS'}}</td>
+                                        <td>{{getAmount 'MAB' 'ARS'}}</td>
+                                        <td>{{getAmount 'GMB' 'ARS'}}</td>
+                                        <td>{{getAmount 'TOTAL' 'ARS'}}</td>
+                                    </tr>
+                                    <tr>
+                                        <td>USD</td>
+                                        <td>{{getAmount 'MEC' 'USD'}}</td>
+                                        <td>{{getAmount 'PDB' 'USD'}}</td>
+                                        <td>{{getAmount 'DAB' 'USD'}}</td>
+                                        <td>{{getAmount 'MAB' 'USD'}}</td>
+                                        <td>{{getAmount 'GMB' 'USD'}}</td>
+                                        <td>{{getAmount 'TOTAL' 'USD'}}</td>
+                                    </tr>
+                                </tbody>
                             </table>
-                            <div class="listview_content">
-                                <table class="table table-striped table-hover">
-                                    <tbody>
-                                    {{#each rec in records}}
-                                        {{#with rec}}
-                                            <tr class="js-record-select">
-                                                <td>{{rec._id}}</td>
-                                                <td>{{rec.action}}</td>
-                                                <td>{{rec.timestamp}}</td>
-                                                <td>{{rec.user}}</td>
-                                            </tr>
-                                        {{/with}}
-                                    {{/each}}
-                                    </tbody>
-                                </table>
-                            </div>
                         </div>
                     </div>
                 </div>
