--- a/client/templates/transactions_monthly_report.html
+++ b/client/templates/transactions_monthly_report.html
@@ -36,7 +36,7 @@
             </div>
         </div>
 
-        <table class="table table-striped table-hover scroll balances">
+        <table class="table table-striped table-hover scroll">
             <thead>
             <tr class="table-header">
                 <th class="text-center">Mes</th>
